The Frontend Developer Career Path - Essential CSS Concepts - Build a Coworking Space Site - Stop the vertical stretch on the button

--- a/The Frontend Developer Career Path/05. Essential CSS Concepts/03. Build a Coworking Space Site/index.css
+++ b/The Frontend Developer Career Path/05. Essential CSS Concepts/03. Build a Coworking Space Site/index.css
@@ -68,6 +68,7 @@ h1 {
 }
 
 button {
+    margin: auto;
     border: none;
     background-color: #CD6858;
     color: whitesmoke;
